Disable permanent scrollbar for updater, Fixes #43
Tested this successfully. "I believe I initially did this without the
scrollbar and there was an issue, but I can't remember what." - Josh

--- a/app/assets/stylesheets/modules/activity-feed.css.scss
+++ b/app/assets/stylesheets/modules/activity-feed.css.scss
@@ -297,7 +297,7 @@
   transition: margin 300ms cubic-bezier(0.17, 0.04, 0.03, 0.94);
   &.expanded {
     margin-top: 0;
-    overflow-x: scroll;
+    overflow-x: auto;
   }
   .series-title {
     color: #fff;
